--- a/server-side-development-node/assignment-3/package.json
+++ b/server-side-development-node/assignment-3/package.json
@@ -1,18 +1,22 @@
 {
-  "name": "assignment-3",
-  "version": "0.0.0",
-  "private": true,
-  "scripts": {
-    "start": "node ./bin/www"
-  },
-  "dependencies": {
-    "cookie-parser": "~1.4.4",
-    "debug": "~2.6.9",
-    "express": "~4.16.1",
-    "http-errors": "~1.6.3",
-    "jade": "~1.11.0",
-    "mongoose": "^5.9.17",
-    "mongoose-currency": "^0.2.0",
-    "morgan": "~1.9.1"
-  }
+	"name": "assignment-3",
+	"version": "0.0.0",
+	"private": true,
+	"scripts": {
+		"start": "node ./bin/www"
+	},
+	"dependencies": {
+		"debug": "~2.6.9",
+		"express": "~4.16.1",
+		"http-errors": "~1.6.3",
+		"jade": "~1.11.0",
+		"jsonwebtoken": "^8.5.1",
+		"mongoose": "^5.9.17",
+		"mongoose-currency": "^0.2.0",
+		"morgan": "~1.9.1",
+		"passport": "^0.4.1",
+		"passport-jwt": "^4.0.0",
+		"passport-local": "^1.0.0",
+		"passport-local-mongoose": "^6.0.1"
+	}
 }
