--- a/server-side-development-node/assignment-4/package.json
+++ b/server-side-development-node/assignment-4/package.json
@@ -6,6 +6,7 @@
 		"start": "node ./bin/www"
 	},
 	"dependencies": {
+		"cors": "^2.8.5",
 		"debug": "~2.6.9",
 		"express": "~4.16.1",
 		"http-errors": "~1.6.3",
@@ -14,6 +15,7 @@
 		"mongoose": "^5.9.17",
 		"mongoose-currency": "^0.2.0",
 		"morgan": "~1.9.1",
+		"multer": "^1.4.2",
 		"passport": "^0.4.1",
 		"passport-jwt": "^4.0.0",
 		"passport-local": "^1.0.0",
